--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,4 +1,4 @@
-.note, .advanced {
+.note, .advanced, .flag, .takeAway {
   padding: 10px;
   margin: 20px 0px;
   border-radius: 5px;
@@ -14,6 +14,22 @@
   background-color: #f1fdf0;
 }
 
-td {
-  vertical-align: top;
+.takeAway {
+  border: 1pt solid #cccc00;
+  background-color: #ffffe6;
+}
+
+.flag {
+  border: 1pt solid #cc0000;
+  background-color: #ffe6e6;
+}
+
+.caption {
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
